# maphon

./: .gitattributes  .gitignore  CLAUDE.md  SPEC.md  SPEC_changeset_bayliss_2026-07-02 (1).md  SPEC_phase2_expanded.md  VIZ_SCOPE.md  pyproject.toml
.claude/: settings.local.json
audits/: provenance_6T_audit.md
calibration/: __init__.py  absolute_fit.py  constants.py  deuteration_design.py  integrity.py  lineshape.py  ratio_test.py  raw_ingest.py  reply_schema.py  rig_model.py  slope_fit.py  supersession.py
calibration/derived/: odmr_shift_vs_power_digitized.csv
calibration/reports/: absolute_fit_digitized.md  deuteration_design.json  deuteration_design.md  integrity_finding1_2026-07-14.md  observable_a_feed.json  ratio_test_digitized.md  ratio_test_digitized_addendum_2026-07-16.md  slope_fit_digitized.md
calibration/samples/: __init__.py
calibration/tools/: __init__.py  xlsx_to_csv.py
docs/: booth_vmode_findings_note.md  commit_errata_2026-07-20.md  commit_errata_2026-07-22.md  field_export_schema.md  q_margin_two_linewidth_findings_note.md  supervisor_onepager_2026-07.md  w2_wu_anchor_windows.md
docs/plans/: cowley_semple_reply_ingestion_and_calibration_rebase.md  humble-stirring-stardust.md  layer_a_sweep_design.md  layer_b_calibration_plan.md  (+10 more)
paper/: claim_evidence_matrix.md  figure_contract.yaml  manuscript_outline.md  result_register.md  reviewer_attack_surface.md
publication/: __init__.py  build.py
refs/: booth_geometry_recovery.md  pentacene_maser_parameter_provenance.md  singh_fig2biii_reanalysis.md  singh_fig2biii_vector_extraction.csv  wu_fig6_spacer_digitization.md  wu_fig6_spacer_extract.py
tests/: _extraction_fixtures.py  _gate_record_fixture.py  conftest.py  test_analytic_benchmark.py  test_analytic_fields.py  test_build_solve_stubs.py  test_calibration_absolute_fit.py  test_calibration_deuteration_design.py  test_calibration_import_boundary.py  test_calibration_integrity.py  test_calibration_lineshape.py  test_calibration_ratio_test.py  test_calibration_raw_ingest.py  test_calibration_reply_schema.py  test_calibration_rig_model.py  test_calibration_samples.py  test_calibration_slope_fit.py  test_calibration_supersession.py  test_calibration_xlsx_tool.py  test_comsol_mph_server.py  test_convergence_assessment.py  test_export_comsol.py  test_export_schema.py  test_extraction_end_to_end.py  test_extraction_p_e.py  test_extraction_pec_lossy.py  test_extraction_purcell.py  test_extraction_q.py  test_extraction_quadrature.py  test_extraction_v_mode.py  test_extraction_weights.py  test_figures.py  test_forward_model_comsol.py  test_forward_model_contract.py  test_gate_comsol.py  test_gate_report.py  test_geometry.py  test_gridding.py  test_materials.py  test_mode_id.py  (+36 more)
viz/: PLAN.md  README.md  index.html
(+530 files in other folders)
