[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sto-maser-cavity"
version = "0.0.1"
description = "STO TE01delta maser cavity: forward model + yield/tolerance pipeline (SPEC.md is the authoritative source of truth)."
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]
comsol = ["mph>=1.2"]
reports = ["matplotlib>=3.7"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
markers = [
    "requires_comsol: needs MPh + a local COMSOL licence; skipped unless --comsol is passed (SPEC §1: CI never assumes a licence)",
    "smoke_test: exercises a full pipeline path without gating on published numbers (the Booth Table 8 gate stays xfail separately)",
]
